--- a/templates/matches.html
+++ b/templates/matches.html
@@ -5,32 +5,27 @@
         <ul class="navbar-nav ">
             <li class="nav-item">
                 <a class="nav-link" href="/">
-                    <span class='fa fa-home fa-lg'></span><br>
-                    Home
+                    <span class='fa fa-home fa-lg'></span><br> Home
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/teams/">
-                    <span class='fa fa-users fa-lg'></span><br>
-                    Teams
+                    <span class='fa fa-users fa-lg'></span><br> Teams
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/stadiums/">
-                    <span class='fa fa-road fa-lg'></span><br>
-                    Stadiums
+                    <span class='fa fa-road fa-lg'></span><br> Stadiums
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/channels/">
-                    <span class='fa fa-tv fa-lg'></span><br>
-                    Channels
+                    <span class='fa fa-tv fa-lg'></span><br> Channels
                 </a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link navactive" href="/matches/">
-                    <span class='fa fa-futbol fa-lg'></span><br>
-                    Matches
+                    <span class='fa fa-futbol fa-lg'></span><br> Matches
                 </a>
             </li>
         </ul>
@@ -66,28 +61,26 @@
             </div>
 
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-                <div class="modal-dialog modal-lg" style="min-width:1000px" role="document">
+                <div class="modal-dialog modal-lg"  role="document">
                     <div class="modal-content">
                         <div class="modal-body">
                             <div class="container-fluid">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                 <div class="row">
-                                    <div class="col-sm-6" style="zoom:50%">
-                                        <center>
-                                            <h3 id="marker_title" class=""></h3>
-                                            <h3 id="round"></h3>
-                                            <img id="home_flag" src="" style="width:140px; height:100px" /> &nbsp;<strong>vs</strong>&nbsp;
-                                            <img id="away_flag" src="" style="width:150px; height:100px" />
-                                            <h3 id="score" style="padding:40px"></h3>
-                                            <br>
-                                            <h3>Stadium : </h3>
-                                            <h3 id="stadium"> </h3>
-                                            <br>
-                                            <h3>Channels : </h3>
-                                            <div id="channelcards" class="row"> </div>
-                                        </center>
+                                    <div class="col-12 col-md-6 center" style="zoom:50%">
+                                        <h3 id="marker_title" class=""></h3>
+                                        <h3 id="round"></h3>
+                                        <img id="home_flag" src="" style="width:140px; height:100px" /> &nbsp;<strong>vs</strong>&nbsp;
+                                        <img id="away_flag" src="" style="width:150px; height:100px" />
+                                        <h3 id="score" style="padding:40px"></h3>
+                                        <br>
+                                        <h3>Stadium : </h3>
+                                        <h3 id="stadium"> </h3>
+                                        <br>
+                                        <h3>Channels : </h3>
+                                        <div id="channelcards" class="row"> </div>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-12 col-md-6">
                                         <form id="form" method="POST">{% csrf_token %} {{form.as_p}}
                                             <button type="submit" class="btn btn-dark"><span class="fa fa-paper-plane f-lg"></span>
                                                 Comment </button>
